--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
             <!-- area calculator -->
             <div class="w-[400px]">
-                <div class="text-4xl">Area Calculator</div>
+                <div class="text-5xl font-bold">Area Calculator</div>
                 <div id="calculation-entry">
                   
                 </div>
