--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Triangle card -->
                 <div class="card w-96 bg-base-100 shadow-xl hover:bg-purple-300">
-                    <figure><img src="/images/triangle.png" alt="Shoes" /></figure>
+                    <figure><img src="../images/triangle.png" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Triangle</h2>
                       <p>Area (A) = 0.5 X b X h</p>
@@ -39,7 +39,7 @@
                   </div>
                 <!-- Rectangle card -->
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="/images/rectangle.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/rectangle.png" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Rectangle</h2>
                       <p>Area (A) = w X l</p>
@@ -59,7 +59,7 @@
                 
                 <!-- parallelogram card -->
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="/images/parallelogram.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/parallelogram.png" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">parallelogram</h2>
                       <p>Area (A) = b X h</p>
@@ -78,7 +78,7 @@
                   </div>
                 <!-- Ellipse card -->
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="/images/ellipse.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/ellipse.png" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Ellipse</h2>
                       <p>Area (A) = π ab</p>
@@ -97,7 +97,7 @@
                   </div>
                 <!-- second card -->
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="/images/rectangle.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/rectangle.png" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Shoes!</h2>
                       <p>If a dog chews shoes whose shoes does he choose?</p>
@@ -108,7 +108,7 @@
                   </div>
                 <!-- third card -->
                 <div class="card w-96 bg-base-100 shadow-xl">
-                    <figure><img src="/images/rectangle.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/rectangle.png" alt="Shoes" /></figure>
                     <div class="card-body">
                       <h2 class="card-title">Shoes!</h2>
                       <p>If a dog chews shoes whose shoes does he choose?</p>
