--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="container mx-auto">
-    <header>
-<h1></h1>
+<body class=" mx-auto">
+    <header class="bg-cyan-200 text-center py-4">
+<h1 class="text-3xl font-bold">Interactive <br>
+  <h3 class="text-2xl font-semibold">Geometry Genius</h3></h1>
     </header>
-    <main class=" mt-5 bg-orange-100 border-slate-900">
+    <main class=" mt-5  border-slate-900">
         <!-- main container -->
-        <div class="flex flex-col lg:flex-row">
+        <div class="relative">
             <!-- shape container -->
-            <div class="grid grid-cols-1 md:grid-cols-2 w-full lg:w-3/4 gap-5  place-items-center">
+            <div class="h-min grid grid-cols-1 lg:grid-cols-2 w-3/4 gap-5  place-items-center">
                 <!-- Triangle card -->
                 <div class="card w-96 bg-base-100 shadow-xl hover:bg-purple-300">
                     <figure><img src="./images/triangle.png" alt="" /></figure>
@@ -98,10 +99,9 @@
              
             </div>
             <!-- area calculator -->
-            <div class="text-center w-full lg:w-1/4 py-5 lg:p-0 bg-slate-200">
+            <div class="text-center w-1/5 mx-auto py-5 overflow-auto lg:p-0 bg-slate-200 h-[70vh] absolute top-0 right-[5%] rounded-xl">
                 <div class="md:text-3xl font-bold">Area Calculator</div>
                 <div id="calculation-entry">
-                  
                 </div>
             </div>
         </div>
