--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+
+
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" conheadershoetent="width=device-width, initial-scale=1.0">
     <title>Geometry Genius</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -108,5 +110,4 @@
     </main>
     <script src="scripts/area-calculator.js"></script>
 </body>
-
 </html>
